# ddo-tools

./: .gitignore  CLAUDE.md  README.md  eslint.config.js  index.html  package-lock.json  package.json  playwright.config.ts  vite.config.ts
.github/workflows/: ci.yml  deploy.yml
docs/: binary-reverse-engineering.md  dat-format.md  db-guidelines.md  ddowiki-api.md  frontend-roadmap.md  game-files.md  roadmap.md  styling.md  testing.md
e2e/: landing.spec.ts  nav-bar.spec.ts  sidebar.spec.ts
public/: 404.html  sw.js
public/data/: ddo.db  items.json
scripts/: pyproject.toml
scripts/src/ddo_data/: cli.py  enums.py  stat_names.py
scripts/src/ddo_data/dat_parser/: __init__.py  archive.py  btree.py  constants.py  decompress.py  effects.py  extract.py  fid_enhancement_lookup.json  fid_item_lookup.json  fid_lookups.py  namemap.py  probe.py  registry.py  spells_correlate.py  strings.py  tagged.py  utils.py  validate.py
scripts/src/ddo_data/data/: overrides.json
scripts/src/ddo_data/db/: __init__.py  schema.py  validate.py  writers.py
scripts/src/ddo_data/game_data/: __init__.py  enums.py  feats.py  items.py
scripts/src/ddo_data/icons/: __init__.py  extract.py
scripts/src/ddo_data/wiki/: __init__.py  class_feat_data.json  client.py  parsers.py  quest_seed_data.json  scraper.py
scripts/tests/: conftest.py  test_cli.py  test_dat_parser.py  test_db.py  test_game_data.py  test_icons.py  test_namemap.py  test_probe.py  test_strings.py  test_wiki_client.py  test_wiki_parsers.py  test_wiki_scraper.py
src/: appPaths.ts  index.css  main.tsx  router.tsx
(+92 files in other folders)
