[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "ddo-data"
version = "0.1.0"
description = "Data pipeline for DDO Tools - parses game files and scrapes wiki"
requires-python = ">=3.10"
dependencies = [
    "click>=8.0",
    "python-dotenv>=1.0",
    "requests>=2.28",
    "beautifulsoup4>=4.11",
    "Pillow>=9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "ruff>=0.4",
]

[project.scripts]
ddo-data = "ddo_data.cli:cli"

[tool.hatch.build.targets.wheel]
packages = ["src/ddo_data"]

[tool.ruff]
target-version = "py310"
line-length = 120

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
